DevTools: Avoid line wrapping after the resolution emulation checkbox
This is a regression from r187165.

TBR=vsevik
BUG=443043
NOTRY=true

Review URL: https://codereview.chromium.org/814483002

git-svn-id: svn://svn.chromium.org/blink/trunk@187353 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/ui/checkboxTextLabel.css
+++ b/front_end/ui/checkboxTextLabel.css
@@ -7,7 +7,7 @@
 :host {
     padding: 0;
     margin: 0;
-    display: flex;
+    display: inline-flex;
     flex-shrink: 0;
     align-items: flex-start;
 }
